isl-rs/src/set.rs

  pub fn isl_basic_set_remove_unknown_divs(bset: BasicSet) -> Option<BasicSet>;
  pub fn isl_set_remove_unknown_divs(set: Set) -> Option<Set>;
  pub fn isl_set_remove_divs(set: Set) -> Option<Set>;
  pub fn isl_set_split_dims(set: Set, type_: DimType, first: c_uint, n: c_uint) -> Option<Set>;
  pub fn isl_basic_set_drop_constraints_involving_dims(bset: BasicSet, type_: DimType, first: c_uint, n: c_uint) -> Option<BasicSet>;
  pub fn isl_basic_set_drop_constraints_not_involving_dims(bset: BasicSet, type_: DimType, first: c_uint, n: c_uint) -> Option<BasicSet>;
  pub fn isl_set_drop_constraints_involving_dims(set: Set, type_: DimType, first: c_uint, n: c_uint) -> Option<Set>;
  pub fn isl_set_drop_constraints_not_involving_dims(set: Set, type_: DimType, first: c_uint, n: c_uint) -> Option<Set>;
  pub fn isl_basic_set_involves_dims(bset: BasicSetRef, type_: DimType, first: c_uint, n: c_uint) -> Bool;
  pub fn isl_set_involves_dims(set: SetRef, type_: DimType, first: c_uint, n: c_uint) -> Bool;
  pub fn isl_set_print_internal(set: SetRef, out: *mut FILE, indent: c_int) -> ();
  pub fn isl_set_plain_is_empty(set: SetRef) -> Bool;
  pub fn isl_set_plain_is_universe(set: SetRef) -> Bool;
  pub fn isl_set_is_params(set: SetRef) -> Bool;
  pub fn isl_set_is_empty(set: SetRef) -> Bool;
  pub fn isl_set_is_bounded(set: SetRef) -> Bool;
  pub fn isl_set_is_subset(set1: SetRef, set2: SetRef) -> Bool;
  pub fn isl_set_is_strict_subset(set1: SetRef, set2: SetRef) -> Bool;
  pub fn isl_set_is_equal(set1: SetRef, set2: SetRef) -> Bool;
  pub fn isl_set_is_disjoint(set1: SetRef, set2: SetRef) -> Bool;
  pub fn isl_set_is_singleton(set: SetRef) -> Bool;
  pub fn isl_set_is_box(set: SetRef) -> Bool;
  pub fn isl_set_has_equal_space(set1: SetRef, set2: SetRef) -> Bool;
  pub fn isl_set_sum(set1: Set, set2: Set) -> Option<Set>;
  pub fn isl_basic_set_neg(bset: BasicSet) -> Option<BasicSet>;
  pub fn isl_set_neg(set: Set) -> Option<Set>;
  pub fn isl_set_make_disjoint(set: Set) -> Option<Set>;
  pub fn isl_basic_set_compute_divs(bset: BasicSet) -> Option<Set>;
  pub fn isl_set_compute_divs(set: Set) -> Option<Set>;
  pub fn isl_set_align_divs(set: Set) -> Option<Set>;
  pub fn isl_set_plain_get_val_if_fixed(set: SetRef, type_: DimType, pos: c_uint) -> Option<Val>;
  pub fn isl_set_dim_is_bounded(set: SetRef, type_: DimType, pos: c_uint) -> Bool;
  pub fn isl_set_dim_has_lower_bound(set: SetRef, type_: DimType, pos: c_uint) -> Bool;
  pub fn isl_set_dim_has_upper_bound(set: SetRef, type_: DimType, pos: c_uint) -> Bool;
  pub fn isl_set_dim_has_any_lower_bound(set: SetRef, type_: DimType, pos: c_uint) -> Bool;
  pub fn isl_set_dim_has_any_upper_bound(set: SetRef, type_: DimType, pos: c_uint) -> Bool;
  pub fn isl_basic_set_gist(bset: BasicSet, context: BasicSet) -> Option<BasicSet>;
  pub fn isl_set_gist_basic_set(set: Set, context: BasicSet) -> Option<Set>;
  pub fn isl_set_gist(set: Set, context: Set) -> Option<Set>;
  pub fn isl_set_gist_params(set: Set, context: Set) -> Option<Set>;
  pub fn isl_set_dim_residue_class_val(set: SetRef, pos: c_int, modulo: *mut Val, residue: *mut Val) -> Stat;
  pub fn isl_stride_info_get_stride(si: StrideInfoRef) -> Option<Val>;
  pub fn isl_stride_info_get_offset(si: StrideInfoRef) -> Option<Aff>;
  pub fn isl_stride_info_free(si: StrideInfo) -> *mut c_void;
  pub fn isl_set_get_stride_info(set: SetRef, pos: c_int) -> Option<StrideInfo>;
  pub fn isl_set_get_stride(set: SetRef, pos: c_int) -> Option<Val>;
  pub fn isl_set_coalesce(set: Set) -> Option<Set>;
  pub fn isl_set_plain_cmp(set1: SetRef, set2: SetRef) -> c_int;
  pub fn isl_set_plain_is_equal(set1: SetRef, set2: SetRef) -> Bool;
  pub fn isl_set_plain_is_disjoint(set1: SetRef, set2: SetRef) -> Bool;
  pub fn isl_set_get_hash(set: SetRef) -> c_uint;
  pub fn isl_set_n_basic_set(set: SetRef) -> c_int;
  pub fn isl_set_foreach_basic_set(set: SetRef, fn_: unsafe extern "C" fn(bset: BasicSet, user: *mut c_void) -> Stat, user: *mut c_void) -> Stat;
  pub fn isl_set_get_basic_set_list(set: SetRef) -> Option<BasicSetList>;
  pub fn isl_set_foreach_point(set: SetRef, fn_: unsafe extern "C" fn(pnt: Point, user: *mut c_void) -> Stat, user: *mut c_void) -> Stat;
  pub fn isl_set_count_val(set: SetRef) -> Option<Val>;
  pub fn isl_basic_set_from_point(pnt: Point) -> Option<BasicSet>;
  pub fn isl_set_from_point(pnt: Point) -> Option<Set>;
  pub fn isl_basic_set_box_from_points(pnt1: Point, pnt2: Point) -> Option<BasicSet>;
  pub fn isl_set_box_from_points(pnt1: Point, pnt2: Point) -> Option<Set>;
  pub fn isl_basic_set_lift(bset: BasicSet) -> Option<BasicSet>;
  pub fn isl_set_lift(set: Set) -> Option<Set>;
  pub fn isl_set_lex_le_set(set1: Set, set2: Set) -> Option<Map>;
  pub fn isl_set_lex_lt_set(set1: Set, set2: Set) -> Option<Map>;
  pub fn isl_set_lex_ge_set(set1: Set, set2: Set) -> Option<Map>;
  pub fn isl_set_lex_gt_set(set1: Set, set2: Set) -> Option<Map>;
  pub fn isl_set_size(set: SetRef) -> c_int;
  pub fn isl_basic_set_align_params(bset: BasicSet, model: Space) -> Option<BasicSet>;
  pub fn isl_set_align_params(set: Set, model: Space) -> Option<Set>;
  pub fn isl_basic_set_equalities_matrix(bset: BasicSetRef, c1: DimType, c2: DimType, c3: DimType, c4: DimType) -> Option<Mat>;
  pub fn isl_basic_set_inequalities_matrix(bset: BasicSetRef, c1: DimType, c2: DimType, c3: DimType, c4: DimType) -> Option<Mat>;
  pub fn isl_basic_set_from_constraint_matrices(dim: Space, eq: Mat, ineq: Mat, c1: DimType, c2: DimType, c3: DimType, c4: DimType) -> Option<BasicSet>;
  pub fn isl_basic_set_reduced_basis(bset: BasicSetRef) -> Option<Mat>;
  pub fn isl_basic_set_coefficients(bset: BasicSet) -> Option<BasicSet>;
  pub fn isl_basic_set_list_coefficients(list: BasicSetList) -> Option<BasicSetList>;
  pub fn isl_set_coefficients(set: Set) -> Option<BasicSet>;
  pub fn isl_basic_set_solutions(bset: BasicSet) -> Option<BasicSet>;
  pub fn isl_set_solutions(set: Set) -> Option<BasicSet>;
  pub fn isl_set_dim_max(set: Set, pos: c_int) -> Option<PwAff>;
  pub fn isl_set_dim_min(set: Set, pos: c_int) -> Option<PwAff>;
  pub fn isl_basic_set_to_str(bset: BasicSetRef) -> Option<CString>;
  pub fn isl_set_to_str(set: SetRef) -> Option<CString>;
}

#[repr(transparent)]
#[derive(Debug)]
pub struct StrideInfo(pub NonNull<c_void>);

#[repr(transparent)]
#[derive(Debug, Clone, Copy, Ord, PartialOrd, Eq, PartialEq, Hash)]
pub struct StrideInfoRef(pub NonNull<c_void>);

impl_try!(StrideInfo);
impl_try!(StrideInfoRef);

impl StrideInfo {
  #[inline(always)]
  pub fn read(&self) -> StrideInfo { unsafe { ptr::read(self) } }
  #[inline(always)]
  pub fn write(&self, x: StrideInfo) { unsafe { ptr::write(self as *const _ as _, x) } }
}

impl AsRef<StrideInfoRef> for StrideInfo {
  #[inline(always)]
  fn as_ref(&self) -> &StrideInfoRef { unsafe { mem::transmute(self) } }
}

impl Deref for StrideInfo {
  type Target = StrideInfoRef;
  #[inline(always)]
  fn deref(&self) -> &StrideInfoRef { self.as_ref() }
}

impl To<Option<StrideInfo>> for *mut c_void {
  #[inline(always)]
  unsafe fn to(self) -> Option<StrideInfo> { NonNull::new(self).map(StrideInfo) }
}
